--- a/YuGuan/AndroidManifest.xml
+++ b/YuGuan/AndroidManifest.xml
@@ -70,6 +70,9 @@
             android:name="com.yuguan.activities.MallInfo"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
+            android:name="com.yuguan.activities.FriendInfo"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
             android:name=".InfoXiaohei"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
