--- a/YuGuan/AndroidManifest.xml
+++ b/YuGuan/AndroidManifest.xml
@@ -73,6 +73,15 @@
             android:name="com.yuguan.activities.FriendInfo"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity
+            android:name="com.yuguan.activities.PingFenActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="com.yuguan.activities.PingFenResultActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
+            android:name="com.yuguan.activities.RegisterActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
             android:name="com.yuguan.activities.AccountInfo"
             android:theme="@android:style/Theme.NoTitleBar" 
             android:configChanges="orientation|keyboardHidden"/>
