--- a/YuGuan/.settings/org.eclipse.core.resources.prefs
+++ b/YuGuan/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,4 @@ encoding//src/com/yuguan/activities/SportCollectAdepter.java=UTF-8
 encoding//src/com/yuguan/activities/SportRequestAdepter.java=UTF-8
 encoding//src/com/yuguan/activities/SysNoticeAdepter.java=UTF-8
 encoding//src/com/yuguan/activities/UserPrvmsgAdepter.java=UTF-8
+encoding/<project>=gbk
